--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             property="og:description"
             content="The vibe continues to deteriorate"
         />
+        <meta property="og:type" content="article" />
         <meta property="og:url" content="https://ambientdealer.com" />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="627" />
