--- a/index.html
+++ b/index.html
@@ -2,21 +2,38 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+
+        <!-- Primary Meta Tags -->
+        <title>RAE</title>
+        <meta name="title" content="RAE" />
+        <meta name="description" content="The vibe continues to deteriorate" />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://www.ambientdealer.com/" />
         <meta property="og:title" content="RAE" />
-        <meta
-            property="og:image"
-            content="https://www.billionairebeauties.com/cdn/shop/articles/kanyewest-contacts_lenses_solotica-quartzo_1400x.jpg?v=1647409315"
-        />
         <meta
             property="og:description"
             content="The vibe continues to deteriorate"
         />
-        <meta property="og:type" content="article" />
-        <meta property="og:url" content="https://ambientdealer.com" />
-        <meta property="og:image:width" content="1200" />
-        <meta property="og:image:height" content="627" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            property="og:image"
+            content="https://www.billionairebeauties.com/cdn/shop/articles/kanyewest-contacts_lenses_solotica-quartzo_1400x.jpg?v=1647409315"
+        />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://www.ambientdealer.com/" />
+        <meta property="twitter:title" content="RAE" />
+        <meta
+            property="twitter:description"
+            content="The vibe continues to deteriorate"
+        />
+        <meta
+            property="twitter:image"
+            content="https://www.billionairebeauties.com/cdn/shop/articles/kanyewest-contacts_lenses_solotica-quartzo_1400x.jpg?v=1647409315"
+        />
+
         <title>RAE</title>
         <!-- Google tag (gtag.js) -->
         <script
